force-app/main/default/objects/ER_Bank_Account__c/fields/ER_Bank_Account_Number_Key__c.field-meta.xml
<CustomField>
    <fullName>ER_Bank_Account_Number_Key__c</fullName>
    <label>Bank Account Number Key</label>
    <length>4</length>
    <type>Text</type>
</CustomField>