force-app/main/default/objects/ER_Bank_Account__c/fields/ER_Bank_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>ER_Bank_Account_Status__c</fullName>
    <label>Bank Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>