force-app/main/default/objects/ER_Bank_Account__c/fields/ER_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ER_Business_Unit__c</fullName>
    <formula>Text(Owner:User.ER_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>