force-app/main/default/objects/ER_Bank_Account__c/fields/ER_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>ER_Financial_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Center</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>