force-app/main/default/objects/ER_Bank_Account__c/fields/IT_ABI__c.field-meta.xml
<CustomField>
    <fullName>IT_ABI__c</fullName>
    <label>ABI</label>
    <length>5</length>
    <type>Text</type>
</CustomField>