force-app/main/default/objects/ER_Bank_Account__c/fields/IT_Authorized__c.field-meta.xml
<CustomField>
    <fullName>IT_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized</label>
    <type>Checkbox</type>
</CustomField>