force-app/main/default/objects/ER_Bank_Account__c/fields/IT_CAB__c.field-meta.xml
<CustomField>
    <fullName>IT_CAB__c</fullName>
    <label>CAB</label>
    <length>5</length>
    <type>Text</type>
</CustomField>