force-app/main/default/objects/ER_Bank_Account__c/fields/IT_Cin__c.field-meta.xml
<CustomField>
    <fullName>IT_Cin__c</fullName>
    <label>CIN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>