force-app/main/default/objects/ER_Bank_Account__c/fields/IT_Economic_AC_User__c.field-meta.xml
<CustomField>
    <fullName>IT_Economic_AC_User__c</fullName>
    <label>Economic AC User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>