force-app/main/default/objects/ER_Bank_Account__c/fields/IT_Future_Change_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Bank_Account__c</fullName>
    <label>Future Change Bank Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>