force-app/main/default/objects/ER_Bank_Account__c/fields/IT_Future_Change_SDD__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_SDD__c</fullName>
    <label>Future Change SDD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>