force-app/main/default/objects/ER_Bank_Account__c/fields/IT_Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Payment_Code__c</fullName>
    <label>Payment Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Payment_Code</valueSetName>
    </valueSet>
</CustomField>