force-app/main/default/objects/ER_Bank_Account__c/fields/IT_SDD_Contract_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Contract_Code__c</fullName>
    <label>SDD Contract Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>