force-app/main/default/objects/ER_Bank_Account__c/fields/IT_SDD_Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Subscription_Date__c</fullName>
    <label>SDD Subscription Date</label>
    <type>Date</type>
</CustomField>