force-app/main/default/objects/ER_Bank_Account__c/fields/IT_SEPA_Original_Module__c.field-meta.xml
<CustomField>
    <fullName>IT_SEPA_Original_Module__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEPA Original Module</label>
    <type>Checkbox</type>
</CustomField>