force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRHU06_IBAN_Hungarian_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>VRHU06_IBAN_Hungarian_Format</fullName>
    <active>true</active>
    <description>This validation rule will control the IBAN format to ensure it fit Hungarian format, as following : 

00000000-00000000-00000000 (8 digits - dash separator - 8 digits - dash separator / 8 digits)</description>
    <errorConditionFormula>AND( 
$User.ER_BypassVR__c = False,
ER_Business_Unit__c =&#39;HU&#39;,  
NOT( 
OR( 
LEN( ER_IBAN__c ) = 0, 
REGEX( ER_IBAN__c , &quot;[0-9]{8}-[0-9]{8}-[0-9]{8}&quot;)
)))</errorConditionFormula>
    <errorDisplayField>ER_IBAN__c</errorDisplayField>
    <errorMessage>The format of the IBAN must be equal to Hungarian format, as following : 

00000000-00000000-00000000 (8 digits / dash separator / 8 digits / dash separator / 8 digits)</errorMessage>
</ValidationRule>