force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRIT01_PaymentConditions.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_PaymentConditions</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED(IT_SkipActivation__c)),
$Profile.Name &lt;&gt; &#39;IT CRM&#39;,

NOT (ISNEW()),

 ISCHANGED( IT_Payment_Code__c ) ,

OR(

AND(
(ISPICKVAL(PRIORVALUE( IT_Payment_Code__c),&#39;151&#39;)),
NOT(ISPICKVAL(IT_Payment_Code__c, &#39;214&#39;)),
NOT(ISPICKVAL(IT_Payment_Code__c, &#39;160&#39;))),

AND(
(ISPICKVAL(PRIORVALUE( IT_Payment_Code__c),&#39;214&#39;)),
NOT(ISPICKVAL(IT_Payment_Code__c, &#39;151&#39;)),
NOT(ISPICKVAL(IT_Payment_Code__c, &#39;160&#39;))),

AND(
(ISPICKVAL(PRIORVALUE( IT_Payment_Code__c),&#39;160&#39;)),
NOT(ISPICKVAL(IT_Payment_Code__c, &#39;214&#39;)),
NOT(ISPICKVAL(IT_Payment_Code__c, &#39;151&#39;))),

AND(
NOT((ISPICKVAL(PRIORVALUE( IT_Payment_Code__c),&#39;151&#39;))),
NOT((ISPICKVAL(PRIORVALUE( IT_Payment_Code__c),&#39;160&#39;))),
NOT((ISPICKVAL(PRIORVALUE( IT_Payment_Code__c),&#39;214&#39;))))

))</errorConditionFormula>
    <errorMessage>It&#39;s possible to modify Payment Conditions only if the new value is Credit Card, Bank Transfer or Paypal!</errorMessage>
</ValidationRule>