force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRIT02_SDD_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_SDD_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

NOT(ISNULL(TEXT( IT_SDD_Payment_Code__c ))),
NOT(ISPICKVAL(IT_SDD_Payment_Code__c, &#39;&#39;)),

OR(
ISBLANK( IT_ABI__c ),
ISBLANK( IT_CAB__c ),
ISBLANK( IT_CC__c ),
ISBLANK( IT_Cin__c ),
ISBLANK( IT_SDD_Contract_Code__c ),
ISBLANK( IT_SDD_Fiscal_Code__c ),
ISBLANK( IT_SDD_Subscription_Date__c ),
ISBLANK( IT_Check_Iban__c )
)			
)</errorConditionFormula>
    <errorMessage>Fields must be entered: ABI, CAB, CC, Cin</errorMessage>
</ValidationRule>