force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRIT03_Bank_Required_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT03_Bank_Required_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $User.ER_BypassVR__c=False,
 ISPICKVAL($User.ER_Business_Unit__c,&#39;IT&#39;),
 ISPICKVAL(ER_Financial_Center__r.IT_Client_Status__c,&#39;02&#39;),
 ISPICKVAL(IT_Bank_Account_Code__c, &#39;&#39;),
 NOT(AND(
ISPICKVAL(IT_Payment_Code__c, &#39;&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;075&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;076&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;077&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;078&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;079&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;074&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;094&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;095&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;096&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;097&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;098&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;099&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;115&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;196&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;131&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;132&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;134&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;135&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;137&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;138&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;144&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;145&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;146&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;147&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;148&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;149&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;150&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;151&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;152&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;153&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;155&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;156&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;157&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;158&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;168&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;169&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;170&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;172&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;173&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;175&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;176&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;177&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;178&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;179&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;180&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;181&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;183&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;184&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;185&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;186&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;187&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;189&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;190&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;192&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;193&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;194&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;004&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;012&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;015&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;016&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;017&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;018&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;019&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;020&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;021&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;022&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;023&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;024&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;025&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;026&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;027&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;028&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;209&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;211&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;212&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;213&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;214&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;218&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;220&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;221&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;222&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;223&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;226&#39;),
ISPICKVAL(IT_Payment_Code__c,&#39;227&#39;))
)
)</errorConditionFormula>
    <errorMessage>The Bank Account Code is required for the Payment Condition selected!</errorMessage>
</ValidationRule>