force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRIT05_Status_Based_Change_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT05_Status_Based_Change_Block</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$Profile.Name != &#39;IT System Integration&#39;,
NOT(ISCHANGED(IT_SkipActivation__c)),

ISBLANK(  IT_Future_Change_Bank_Account__c ),
ISBLANK(  IT_Future_Change_SDD__c ),


OR(
ISPICKVAL( ER_Financial_Center__r.IT_Client_Status__c , &#39;10&#39;),
ISPICKVAL( ER_Financial_Center__r.IT_Client_Status__c , &#39;00&#39;),
ISPICKVAL( ER_Financial_Center__r.IT_Client_Status__c , &#39;03&#39;)
)
)</errorConditionFormula>
    <errorMessage>Impossible to modify fields for this client status!</errorMessage>
</ValidationRule>