force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRIT06_Authorized.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT06_Authorized</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

OR(
 AND(
  NOT(ISCHANGED(IT_SkipActivation__c)),
  ISPICKVAL(IT_SDD_Authorized__c, &#39;2&#39;),
  OR(
   ISNULL(TEXT( IT_SDD_Payment_Code__c )),
   ISPICKVAL(IT_SDD_Payment_Code__c, &#39;&#39;),
   ISBLANK( IT_SDD_Contract_Code__c ),
   ISBLANK( IT_SDD_Fiscal_Code__c ),
   ISBLANK( IT_SDD_Subscription_Date__c )
  )
 ),
 AND(
  ISCHANGED(IT_SkipActivation__c),
  ISPICKVAL(IT_SDD_Authorized__c, &#39;2&#39;),
  OR(
   ISNULL(TEXT( IT_SDD_Payment_Code__c )),
   ISPICKVAL(IT_SDD_Payment_Code__c, &#39;&#39;),
   ISBLANK( IT_SDD_Contract_Code__c ),
   ISBLANK( IT_SDD_Fiscal_Code__c ),
   ISBLANK( IT_SDD_Subscription_Date__c )
  )
 )
)
)</errorConditionFormula>
    <errorMessage>Authorized can be set only if SDD field are populated!</errorMessage>
</ValidationRule>