force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRIT09_Insert_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT09_Insert_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
$Profile.Name &lt;&gt; &#39;IT System Integration&#39;,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED( IT_SkipActivation__c )),
ISPICKVAL( IT_SDD_Authorized__c , &#39;2&#39;),
TEXT( IT_Payment_Code__c) &lt;&gt; TEXT(IT_SDD_Payment_Code__c ))</errorConditionFormula>
    <errorMessage>You have to change also payment code with the same value of SDD Payment!</errorMessage>
</ValidationRule>