force-app/main/default/objects/ER_Bank_Account__c/validationRules/VRIT10_Bank_Must_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT10_Bank_Must_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
$Profile.Name &lt;&gt; &#39;IT System Integration&#39;,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISCHANGED( IT_SkipActivation__c )),
ISPICKVAL( IT_SDD_Authorized__c , &#39;2&#39;),
NOT(ISPICKVAL( IT_Bank_Account_Code__c, &#39;&#39; ))
)</errorConditionFormula>
    <errorMessage>Bank Account must be blank!</errorMessage>
</ValidationRule>